# exa-tools

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
docs/: pipeline-animation.html
exa/: __init__.py  client.py  config.py  exceptions.py  internal.py  update.py
exa/aillm/: __init__.py  discover.py  merge.py  reference.py  status.py  sync.py
exa/case/: __init__.py  alerts.py  baseline.py  cases.py  entities.py  ip_classify.py  outcomes.py  qualify.py
exa/cli/: aillm.py  app.py  case.py  cases.py  compliance.py  config.py  sigma.py  splunk_convert.py  update.py
exa/compliance/: __init__.py  _logo_b64.txt  audit.py  concepts.py  frameworks.py  identity.py  mapping.py  ootb.py  query_builder.py  report.py  resolver.py
exa/context/: __init__.py  tables.py
exa/correlation/: __init__.py  rules.py
exa/detection/: __init__.py  rules.py
exa/health/: __init__.py  consumption.py
exa/internal/: __init__.py  dev.py
exa/platform/: __init__.py  access.py
exa/search/: __init__.py  events.py
exa/sigma/: __init__.py  converter.py  parser.py
exa/splunk/: __init__.py  (+6 more)
tests/: conftest.py  test_aillm.py  test_api_modules.py  test_baseline.py  test_case_qualify.py  test_cases.py  test_client.py  test_compliance.py  test_concept_resolver.py  test_config.py  test_config_cli.py  test_context.py  test_field_oracle.py  test_frameworks.py  test_internal.py  test_ootb.py  test_outcomes.py  test_report.py  test_security.py  test_sigma.py  test_sigma_browse.py  test_splunk.py  test_splunk_to_sigma.py  test_token_lifecycle.py  test_update.py
(+24 files in other folders)
