[project]
name = "exa-tools"
version = "0.1.0"
description = "Python automation toolkit for Exabeam New-Scale Analytics (NSA) / SIEM"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "keyring>=25.0",
    "rich>=13.0",
    "typer>=0.12",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.34",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["exa"]

[project.scripts]
exa = "exa.cli.app:app"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
